episode4_Deploy_Our_Apps/socket-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-green
  namespace: mycluster
  labels:
    app.teamdev.ir/name: socket-green
    app.teamdev.ir/version: "1.0"
    app.teamdev.ir/service: socket-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app.teamdev.ir/name: socket-green
      app.teamdev.ir/version: "1.0"
      app.teamdev.ir/service: socket-green
  template:
    metadata:
      labels:
        app.teamdev.ir/name: socket-green
        app.teamdev.ir/version: "1.0"
        app.teamdev.ir/service: socket-green
    spec:
      containers:
        - name: socket
          image: registry.gitlab.com/mohammadmoozeh/kubernetes/socket:1.0
          imagePullPolicy: Always
#          envFrom:
#            - configMapRef:
#                name: socket-config
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: gitlab-registry-credential
      terminationGracePeriodSeconds: 5
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: kubernetes.io/hostname
#                    operator: "In"
#                    values:
#                      - node1
