episode4_Deploy_Our_Apps/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: mycluster
  labels:
    service.teamdev.ir/name: api-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.teamdev.ir/name: api
    app.teamdev.ir/version: "1.0"
    app.teamdev.ir/service: api-service
